tests/errors/macro/parser_include_incorrect_filename.c
int a = 0;

int main()
{
#include "tempc"

	assert(a, "#include is not working");
	return 0;
}
